--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,5 +18,7 @@
       <%= content_tag :div, message, class: type %>
     <% end %>
     <%= yield %>
+
+    <div class="footer"><strong>Little Shop</strong>.</div>
   </body>
 </html>
